--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="dino"></div>
         <div id="cactus"></div>
         <div class="control">
-            <div class="popup"></div>
+            <button id="takeBonus"></button>
             <button id="start" onclick="startGame()">Играть</button>
         </div>
     </div>
